--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "/index.html",
+    "start_url": "https://davidchen206265.github.io/HexadecimalColorCodeGame/index.html",
     "display": "standalone",
     "theme_color": "black",
     "background_color": "white"
